--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -26,7 +26,7 @@
       <div class="panel">
         <div class="panel-heading">Category</div>
         <div class="nav nav-pills nav-stacked">
-          <li><%= link_to "#{@issue.category} (#{Issue.meets_security(current_user).with_category(@issue.category).count})", issues_path(category: @issue.category)%></li>
+          <li><%= link_to "#{@issue.category} (#{Issue.meets_role(current_user).with_category(@issue.category).count})", issues_path(category: @issue.category)%></li>
         </div>
       </div>
     </div>    
@@ -34,7 +34,7 @@
       <div class="panel">
         <div class="panel-heading">Status</div>
         <div class="nav nav-pills nav-stacked">
-          <li><%= link_to "#{@issue.status} (#{Issue.meets_security(current_user).with_status(@issue.status).count})", issues_path(status: @issue.status)%></li>
+          <li><%= link_to "#{@issue.status} (#{Issue.meets_role(current_user).with_status(@issue.status).count})", issues_path(status: @issue.status)%></li>
         </div>
       </div>
     </div>   
