--- a/app/views/users/edit_security.html.erb
+++ b/app/views/users/edit_security.html.erb
@@ -18,7 +18,7 @@
   <% end %>
   <div><%= f.label :security %></div>
   <% (Users::Role.all).each do |role| %>
-    <div><%= check_box_tag "user[roles][]", role.id, @user.abilities.include?(role.name) %> <%= role.name %></div>
+    <div><%= check_box_tag 'user[role_ids][]', role.id, @user.abilities.include?(role.name) %> <%= role.name %></div>
   <% end %>
   <%= f.label :status %>
   <%= f.select :status, ['Deactivated'], :include_blank => true %>
