removed background image

--- a/app/assets/stylesheets/colors/_light_blue_scheme.scss
+++ b/app/assets/stylesheets/colors/_light_blue_scheme.scss
@@ -18,7 +18,7 @@ $color-accent-6: #77e4ce;
 //Layout Colors:
 $border-color: #e8e8e8;
 $well-background-color: white;
-$background-color: white;
+$background-color: #EEEFF0;
 $hover-color:#efefef;
 $hover-color-2: #e3e3e3;
 
