--- a/app/views/layouts/_work_in_progress.html.erb
+++ b/app/views/layouts/_work_in_progress.html.erb
@@ -1,1 +1,1 @@
-<div class="text-center"><%= image_tag('construction.png', class: 'lazyload')%></div>
+<div class="text-center"><%= image_tag('construction.png')%></div>
