--- a/app/views/pages/front_page.html.erb
+++ b/app/views/pages/front_page.html.erb
@@ -29,7 +29,7 @@
               <div class='album-row'>
             <% end %>
             <div class='album-column'>
-              <%= link_to primary_image_helper(album, album, "thumb", square: true) %>
+              <%= link_to primary_image_helper(album, album, 'thumb', square: true, highlight: true) %>
             </div>
             <% if n.odd? %>
               </div><br>
