--- a/app/views/layouts/primary_models/_record_list.html.erb
+++ b/app/views/layouts/primary_models/_record_list.html.erb
@@ -34,7 +34,7 @@
       <div class="record-container">
         <div class="<%= record.class.to_s.downcase %>">
           <% if record.class == Album %>
-                <div class="image"><%= primary_image_helper(record, record, "thumb", :square => true, :outline => true) %></div>
+                <div class="image"><%= primary_image_helper(record, record, 'thumb', square: true, highlight: true) %></div>
                 <div class="name album-name">
                   <h4><%= link_to language_helper(record, :name), record %></h4>
                   <div class="tags"><%= linked_attribute_display(record.tags.meets_role(current_user), '') %></div>
@@ -42,14 +42,14 @@
                 <div class="date"><%= date_helper(record, 'release_date', :calendar_link => false)%></div>
           <% elsif record.class == Song %>
                 <% if record.album.nil? %>
-                  <div class="image"><%= primary_image_helper(record, record, "thumb", :square => true, :outline => true) %></div>
+                  <div class="image"><%= primary_image_helper(record, record, 'thumb', square: true, highlight: true) %></div>
                   <div class="name song-name">
                     <h4><%= link_to language_helper(record, :name), record %></h4>
                     <div class="tags"><%= linked_attribute_display(record.tags.meets_role(current_user), '') %></div>
                   </div>
                   <div class="date"></div>
                 <% else %>
-                  <div class="image"><%= primary_image_helper(record.album, record.album, "thumb", :square => true, :outline => true) %></div>
+                  <div class="image"><%= primary_image_helper(record.album, record.album, 'thumb', square: true, highlight: true) %></div>
                   <div class="name song-name">
                     <h4><%= link_to "#{record.disc_track_number unless record.track_number.nil?} #{language_helper(record, :name)}", record.album %></h4>
                     <h5>Album: <%= link_to language_helper(record.album, :name), record.album %></h5>
@@ -67,14 +67,14 @@
                   <div class="album-images">
                     <% if record.albums.count > 5 %>
                       <% record.albums.order(:release_date).last(5).reverse.each do |album| %>
-                        <div><%= primary_image_helper(album, album, "thumb", :outline_flag => true, :square => true) %></div>
+                        <div><%= primary_image_helper(album, album, 'thumb', square: true, highlight: true) %></div>
                       <% end %>
                       <div class="album-extra-count">
                         <%= link_to "+#{record.albums.count - 5}", record %>
                       </div>
                     <% else %>
                       <% record.albums.order(:release_date).each do |album| %>
-                        <div><%= primary_image_helper(album, album, "thumb", :outline_flag => true, :square => true) %></div>
+                        <div><%= primary_image_helper(album, album, 'thumb', square: true, highlight: true) %></div>
                       <% end %>
                     <% end %>
                   </div>
