--- a/app/views/maintenance/scrape_results.html.erb
+++ b/app/views/maintenance/scrape_results.html.erb
@@ -54,7 +54,7 @@
         <% @log.albums.each do |album| %>
           <div class="row">
             <div class="col-md-3">
-              <%= primary_image_helper(album, album, "thumb", :outline_flag => true, :square => true) %>
+              <%= primary_image_helper(album, album, 'thumb', square: true, highlight: true) %>
             </div>
             <div class="col-md-9">
               <%= link_to album.internal_name, album %> (ID: <%= album.id %>)  <%= link_to "Edit", edit_album_path(album)  %><br>
