--- a/app/views/maintenance/new_scrape.html.erb
+++ b/app/views/maintenance/new_scrape.html.erb
@@ -13,15 +13,15 @@
         <%= fields_for :vgmdb_albums do |f| %>
           <%= f.label :text, 'Album Link List:'%>
           <%= f.text_area :text, :class => 'col-md-12', :rows => '7' %>
-        <% end %></br><br>
+        <% end %><br><br>
         <%= fields_for :vgmdb_artists do |f| %>
           <%= f.label '', 'Artist/Source Link:'%>
           <%= f.text_field '', :class => 'controls' %>
-        <% end %></br><br>
+        <% end %><br><br>
         <%= fields_for :vgmdb_organizations do |f| %>
           <%= f.label '', 'Organization/Search Result Link:'%>
           <%= f.text_field '', :class => 'controls' %>
-        <% end %></br><br>
+        <% end %><br><br>
       </div>
       <div class="actions">
         <%= f.submit 'Scrape!' %>
