fixed wishlist class

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -48,6 +48,6 @@
     border: 5px ridge #D2691E !important;
   }
   
-  a.wishlist {
+  a.wishlisted {
     border: 5px ridge #E189FF !important;
   }
