--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,53 +1,62 @@
-//First, let's alter bootstraps default thumbnail class
-  .thumbnail {
-    background-color: transparent;
-    border: none;
-    border-radius: 0px;
-    margin-bottom: 0px;
-    padding: 0px;
-  }
+img.lazy {
+  opacity: 0;
+  transition: opacity 500ms;
+}
+
+img.loaded {
+  opacity: 1;
+}
+
+
+//Now for the outside box. First, let's alter bootstraps default thumbnail class
+.thumbnail {
+  background-color: transparent;
+  border: none;
+  border-radius: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
 
 
 //Add various efects depending on class, which is given through the helper
-  .thumbnail-bordered {
-    //Given through :border
-    border: 1px solid #dddddd;
-    border-radius: 4px;
-    padding: 4px;
+.thumbnail-bordered {
+  //Given through :border
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  padding: 4px;
+}
+
+a.thumbnail-bordered {
+  &:hover, &:focus, &:active {
+    border-color: #428bca;
   }
-  
-  a.thumbnail-bordered {
-    &:hover, &:focus, &:active {
-      border-color: #428bca;  
-    }
-  }
-  
-  .thumbnail-margined {
-    margin-bottom: 20px;
-  }
-  
-  .thumbnail-square {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center;
-    align-items: center;
-  }
+}
+
+.thumbnail-margined {
+  margin-bottom: 20px;
+}
+
+.thumbnail-square {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
 
 //Highlights album art according to user's collection'
-  //Given through :outline_flag
-  a.collected a.ignored, a.wishlist {
-    display: block;
-    z-index: 1;
-  }
-  
-  a.collected {
-    border: 5px ridge #00BFFF !important;
-  }
-  
-  a.ignored {
-    border: 5px ridge #D2691E !important;
-  }
-  
-  a.wishlisted {
-    border: 5px ridge #E189FF !important;
-  }
+a.collected a.ignored, a.wishlist {
+  display: block;
+  z-index: 1;
+}
+
+a.collected {
+  border: 5px ridge #00BFFF !important;
+}
+
+a.ignored {
+  border: 5px ridge #D2691E !important;
+}
+
+a.wishlisted {
+  border: 5px ridge #E189FF !important;
+}
